--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.650.0",
     "@headlessui/react": "^1.7.17",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "@vimeo/player": "^2.22.0",
     "aos": "^3.0.0-beta.6",
+    "aws-sdk": "^2.1691.0",
     "next": "^14.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
+    "react-toastify": "^10.0.5",
     "sharp": "^0.33.3",
     "typescript": "^5.3.3"
   },
